# pretty-gaming

./: .env  .gitignore  .gitmodules  browserArgs.js  launchPrettyGaming.js  mise.toml  package-lock.json  package.json  scrape_log.txt  todo
baccarat_analyzer/: Cargo.toml
baccarat_analyzer/src/: analyzer_bin.rs  baccarat.rs  main.rs
baccarat_analyzer_v3/src/: analyzer_bin.rs  baccarat.rs  main.rs
bet_module/: executeBet.js  launcher.js  server.js  unified_launcher.js
bet_module/json/: bet_accounts.example.json  bet_accounts.json
dashboard/: backtestEngine.js  bets.html  config.example.json  config.json  index.html  launch_mode.json  server.js  stats.html  stats_hypothesis.html  summary.html
eyes/: dom_extractor.js  evCalculator.js  interceptor.js  launch_eyes_PG_hippo.js  runEyesPG.js  runPG.js  scrapePG.js  stateValidators.js  tableStateManager.js
eyes/dashboard/: index.html  server.js
eyes/json/: eyes_accounts copy.json  eyes_accounts.example.json  eyes_accounts.json  eyes_state copy.json
pretty-test/: console-helper.js  custom-place-bet-debugger.js  debugger.js  get-balance.js  get-bet-summary-today.js  list-tables.js  main.js  place-bet.js  table-tracker.js
pretty-test/eyes/: get-bead-road.js  state-interceptor.js  table-tracker.js
pretty-test/old/: get-timer.js  place-bet.js
utils/: browserArgs.js  check_page_pg.js  chips_balances.json  cleanUpDOM.js  ensureMultiplayActive.js  launch_pg.js  login_timestamps.json  network_watchdog.js  proxy_verifier.js  wash.js  whatsapp_notifier.js
(+51 files in other folders)
