[package]
name = "baccarat-check"
version = "0.1.0"
edition = "2021"
default-run = "baccarat"

[[bin]]
name = "baccarat"
path = "src/main.rs"

[[bin]]
name = "analyzer_bin"
path = "src/analyzer_bin.rs"

[dependencies]
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
